--- a/index.html
+++ b/index.html
@@ -82,20 +82,6 @@
           <li class="contato-item">
 
             <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contato-info">
-              <p class="contato-title">Telefone</p>
-
-              <a href="tel:+5511944931655" class="contato-link">+55 (11) 94493-1655</a>
-            </div>
-
-          </li>
-
-          <li class="contato-item">
-
-            <div class="icon-box">
               <ion-icon name="calendar-outline"></ion-icon>
             </div>
 
@@ -188,7 +174,7 @@
           </p>
 
           <p>
-            Busco constantemente novos desafios e aprendizados, mas fora do trabalho também amo fotografia, ler livros e assistir doramas. Estou sempre aberta a novas conexões e oportunidades de colaboração :)
+            Busco constantemente novos desafios e aprendizados, como hobbies amo fotografia, ler livros e assistir filmes e séries. Estou sempre aberta a novas conexões e oportunidades de colaboração :)
           </p>
         </section>
 
