--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <section class="sobre-text">
           <p>
-            Sou Engenheira de Software Jr no Itaú Unibanco antuando em soluções com AWS Cloud. Também sou estudante de Engenharia da Computação na Fundação Salvador Arena.
+            Sou Engenheira de Software Jr no Itaú Unibanco atuando em soluções com AWS Cloud. Também sou estudante de Engenharia da Computação na Fundação Salvador Arena.
 
           </p>
 
